--- a/_config.yml
+++ b/_config.yml
@@ -104,10 +104,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Gabriele Iommazzo"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "I am a postdoc in the IOL Group at the Zuse Institute Berlin (ZIB), working with Sebastian Pokutta. My main research interests lie at the intersection of machine learning and mathematical optimization. Recently I have been working on algorithms for convex optimization algorithms, in particular Conditional Gradient (aka Frank-Wolfe) ones. 
+    Before my current position, I was a PhD candidate in the OptimiX team at the Laboratoire D'Informatique de l'X (LIX, Ecole Polytechnique), supervised by Claudia D'Ambrosio, Antonio Frangioni and Leo Liberti. My PhD thesis, titled 'Algorithmic Configuration by Learning and Optimization' was about optimization over trained machine learning predictors in mathematical programs, and distance geometry. Prior to this, I obtained my MSc in Data Science and Business Informatics at Università di Pisa. I am from Rome, Italy. In my free time, I enjoy rock climbing, mountains, cooking and Dungeons & Dragons."
+  location         : "Somewhere"i
   email            :
   links:
     - label: "Email"
