adding cv and scholar info

--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,9 @@ author:
   name             : "Gabriele Iommazzo"
   avatar           : "assets/images/fuji.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Postdoc at the Zuse Institute Berlin, working at the intersection of machine learning and convex optimization."
-  location         : "Somewhere"
-  email            :
+  location         : "Berlin"
+  email            : "iommazzo@zib.de"
+  googlescholar    : "https://scholar.google.com/citations?user=YUGK_ZIAAAAJ&hl=it"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
