Update _config.yml fixed broken linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   location         : "Berlin, DE"
   email            : "iommazzo@zib.de"
   googlescholar    : "https://scholar.google.com/citations?user=YUGK_ZIAAAAJ&hl=it"
-  linkedin         : "https://www.linkedin.com/in/gabriele-iommazzo-1351814a/"
+  linkedin         : "gabriele-iommazzo-1351814a/"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
