--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,8 @@ author:
   email            : "iommazzo@zib.de"
   googlescholar    : "https://scholar.google.com/citations?user=YUGK_ZIAAAAJ&hl=it"
   linkedin         : "gabriele-iommazzo-1351814a/"
+  orcid            : "https://orcid.org//0000-0003-3673-966X" # Add your ORCID link here
+
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -130,6 +132,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: "ORCID"
+      icon: "fab fa-fw fa-orcid" # Use ORCID’s Font Awesome class
+      url: "https://orcid.org/0000-0003-3673-966X" # Replace with your ORCID ID
 
 # Site Footer
 footer:
