--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://giommazz.github.io" # the base hostname & pr
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "giommazz/giommazz.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : <img src="/images/fuji.jpeg" alt="Gabriele Iommazzo, Postdoctoral Researcher"> # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/images/fuji.jpeg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -86,7 +86,7 @@ facebook:
   username               :
   app_id                 :
   publisher              :
-og_image                 : <img src="/images/fuji.jpeg" alt="Gabriele Iommazzo, Postdoctoral Researcher">
+og_image                 : "/images/fuji.jpeg"
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Gabriele Iommazzo"
-  avatar           : <img src="/images/fuji.jpeg" alt="Gabriele Iommazzo, Postdoctoral Researcher"> # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/images/fuji.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Postdoc at the Zuse Institute Berlin, working at the intersection of machine learning and convex optimization."
   location         : "Berlin, DE"
   email            : "iommazzo@zib.de"
