--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ algolia:
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
   powered_by             : # true (default), false
 google:
-  search_engine_id       : # YOUR_SEARCH_ENGINE_ID
+  search_engine_id       : "43f73934c0f75400e"
   instant_search         : # false (default), true
 # SEO Related
 google_site_verification :
