--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
   search_engine_id       : "43f73934c0f75400e"
   instant_search         : # false (default), true
 # SEO Related
-google_site_verification :
+google_site_verification : "_wDTYQrKjnW6igKUNMQFF1VRw_zqfj2lqvQ7levhw6g"
 bing_site_verification   :
 naver_site_verification  :
 yandex_site_verification :
