--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "dark" # "default" # "air", "aqua", "contrast", "dark
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Gabriele Iommazzo - Postodctoral researcher at ZIB" # Site title
+title                    : "Gabriele Iommazzo - Postodc, ZIB" # Site title
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Gabriele Iommazzo" # Your name
