--- a/_config.yml
+++ b/_config.yml
@@ -96,10 +96,12 @@ social:
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-tag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
-    tracking_id          :
-    anonymize_ip         : # true, false (default)
+    tracking_id          : "G-H95V9G53QR"  # Your actual Google Analytics tracking ID
+    anonymize_ip         : true # true, false (default) # Optional, anonymizes IP addresses
+
+
 
 
 # Site Author
