Update email in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ author:
   avatar           : "/images/fuji.jpeg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Research in convex optimization, mathematical programming and machine learning"
   location         : "Berlin, DE"
-  email            : "iommazzo@zib.de"
+  email            : "gab.iom89@gmail.com" #"iommazzo@zib.de"
   googlescholar    : "https://scholar.google.com/citations?user=YUGK_ZIAAAAJ&hl=it"
   linkedin         : "gabriele-iommazzo-phd-1351814a/"
   orcid            : "https://orcid.org//0000-0003-3673-966X" # Add your ORCID link here
